<resources>
    <string name="app_name">Learning2</string>
    <string name="txtn1"></string>
    <string name="txtn2"></string>
    <string name="txt_Titulo">Resultado</string>
    <string name="txt_btn">Calcular</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="raiz">Raiz</string>
    <string name="factorial">Factorial</string>
</resources>
